atualização do audio e script

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 </head>
 <body>
 
-    <audio src="music/Nick Cave & The Bad Seeds - Red Right Hand (Mojo Filter Remix) Peaky Blinders Soundtrack [1].MP3" id="music" autoplay ></audio>
+    <audio  id="music" autoplay >
+        <source src="./music/Nick Cave & The Bad Seeds - Red Right Hand (Mojo Filter Remix) Peaky Blinders Soundtrack [1].MP3" aria-details="Audio do site">
+    </audio>
 
     <!-- banner -->
 
